[gd_scene load_steps=6 format=3 uid="uid://n4j1ug0lm3xm"]

[ext_resource type="Theme" uid="uid://cjxmnb0h8hje7" path="res://art/visual/theme1.tres" id="1_6ts8v"]
[ext_resource type="Script" uid="uid://crb783cgp4j4v" path="res://components/start_menu/start_menu.gd" id="1_s3lks"]
[ext_resource type="Texture2D" uid="uid://ckrjy0fnwsg6r" path="res://art/screencap.png" id="3_alcev"]
[ext_resource type="Script" uid="uid://bfuapyqlidunn" path="res://components/hover sound component/hover_sound.gd" id="3_h36j1"]
[ext_resource type="AudioStream" uid="uid://dabcsogrgdblr" path="res://audio/blood_squelch.mp3" id="5_rsujc"]

[node name="start_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3lks")

[node name="play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = 222.0
offset_right = 295.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6ts8v")
text = "play"
script = ExtResource("3_h36j1")
hover_sound = ExtResource("5_rsujc")
volume_db = -10.0

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_top = 297.0
offset_right = 295.0
offset_bottom = 358.0
theme = ExtResource("1_6ts8v")
text = "options"
script = ExtResource("3_h36j1")
hover_sound = ExtResource("5_rsujc")
volume_db = -10.0

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_top = 372.0
offset_right = 295.0
offset_bottom = 432.0
theme = ExtResource("1_6ts8v")
text = "quit"
script = ExtResource("3_h36j1")
hover_sound = ExtResource("5_rsujc")
volume_db = -10.0

[node name="background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_alcev")
expand_mode = 1

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
